--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
           <nav class="sidebar-nav">
     <ul>
-      <li><a href="{{ "/about/" | relative_url }}">About</a></li>
+      <li><a href="{{ "/" | relative_url }}">About</a></li>
       <li><a href="{{ "/agreements/" | relative_url }}">Agreements</a></li>
       <li><a href="{{ "/calendar/" | relative_url }}">Calendar</a></li>
       <li><a href="{{ "/contact/" | relative_url }}">Contact</a></li>
