--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -83,6 +83,18 @@ header a:active {
   text-decoration: underline;
 }
 
+/* Responsive Google Calendar embed */
+.calendar-embed {
+  width: 100%;
+}
+
+.calendar-embed iframe {
+  width: 100%;
+  height: 80vh;        /* scales with viewport */
+  min-height: 600px;  /* prevents it being too short */
+  border: 0;
+}
+
 
 
 
